syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.generated.PatientsRoomControl";
option java_outer_classname = "PatientsRoomControlImpl";

package PatientsRoomControl;

// The service definition.
// UNARY SERVICE
// The server that you implement must extend the class  <servicename>ImplBase
// so in this example you will create a server class that extends ---> PatientsRoomControlImplBase

// LightControl manages the rooms light, it turns it on or off gradually.
// BedHeight
// CourtainsGap
// There is a spinner for each service that will modify the current value of the selected setting

service PatientsRoomControl {

  rpc LightControl (LightRequest) returns (LightResponse) {}

  rpc BedHeight (HeightRequest) returns (HeightResponse) {}

  rpc CourtainsGap (GapRequest) returns (GapResponse) {}
}

// for the light setting
message LightRequest {
    int32 light_request = 1;
}
// The response message containing answer from the server
message LightResponse {
    string light_response = 1;
}


// for the bed's height setting
message HeightRequest {
    int32 height_request = 1;
}
message HeightResponse {
    string height_response = 1;
}


// for the courtainsGap
message GapRequest {
    int32 courtains_request = 1;
}
message GapResponse {
    string courtains_response = 1;
}
   

